--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "highlight.js": "^11.2.0",
     "marked": "^1.2.5",
     "next": "10.0.3",
-    "prismjs": "^1.24.1",
+    "puppeteer": "^10.2.0",
     "puppeteer-core": "^5.5.0",
     "raw-loader": "^4.0.2",
     "react": "17.0.1",
